spring-cache/k8s/k3s/sample-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-api-svc
  namespace: api
  labels:
    app: sample-api
spec:
  ports:
    - name: rest
      port: 8080
      targetPort: http
  selector:
    app: sample-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-api
  namespace: api
  labels:
    app: sample-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-api
  template:
    metadata:
      labels:
        app: sample-api
    spec:
      containers:
        - name: sample-api
          image: jei0486/sample-api
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          command: ["java"]
          args: ['-cp', '@/app/jib-classpath-file','com.sample.Application']
